<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:background="@color/colorPrimary"
        tools:ignore="UselessParent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical">
            <TextView
                android:id="@+id/judulDaftar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:textSize="27sp"
                android:textStyle="bold"
                android:textColor="@color/hitam"
                android:layout_gravity="center"
                android:fontFamily="serif"
                android:text="@string/daftar_catatan" />
            <TextView
                android:id="@+id/hapusSemuaCatatan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:layout_marginEnd="10dp"
                android:textColor="@color/hitam"
                android:text="@string/hapus_semua"
                android:textSize="10sp"
                app:drawableTopCompat="@drawable/ic_hapus_semua"
                tools:ignore="SmallSp" />
        </LinearLayout>

        <ListView
            android:id="@+id/listDaftar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:focusable="false"
            android:layout_margin="10dp"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agus_pribowo_190401202"
        android:gravity="center_horizontal"
        android:textColor="@color/white"
        android:textSize="15sp" />

</LinearLayout>